removed some additional apm related code